[gd_scene load_steps=10 format=2]

[ext_resource path="res://Weapons/DamageArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons/Projectiles/Bomb.gd" type="Script" id=2]
[ext_resource path="res://Weapons/Projectiles/bomb.png" type="Texture" id=3]
[ext_resource path="res://Weapons/Projectiles/ExplosionParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/Projectiles/explode.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 56.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.5, 6 )

[node name="Bomb" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 37
script = ExtResource( 2 )
damage_amount = 20

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4

[node name="DamageArea" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 63
monitoring = false
monitorable = false
damage_type = "Explosive"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 3.07759e-06, 0 )
rotation = 1.57079

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 59

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 4 )

[node name="ExplosionParticles" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, 5 )
shape = SubResource( 5 )

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
